# text-similarity-ranking

./: .gitignore  README.md  pyproject.toml
data/: test_data.csv
similarity-ranking/: data_loader.py  jaro_winkler.py  jaro_winkler_vanek.py  main.py
